CPL/Tema3/tema3-tests/compiler.lcpl.err
Exception in thread "main" java.lang.NullPointerException
	at ro.pub.cs.lcpl.Block.emitIR(Block.java:30)
	at ro.pub.cs.lcpl.LocalDefinition.emitIR(LocalDefinition.java:98)
	at ro.pub.cs.lcpl.LocalDefinition.emitIR(LocalDefinition.java:98)
	at ro.pub.cs.lcpl.LocalDefinition.emitIR(LocalDefinition.java:98)
	at ro.pub.cs.lcpl.LocalDefinition.emitIR(LocalDefinition.java:98)
	at ro.pub.cs.lcpl.Block.emitIR(Block.java:28)
	at ro.pub.cs.lcpl.IfStatement.emitIR(IfStatement.java:68)
	at ro.pub.cs.lcpl.Program.emitIR(Program.java:349)
	at LCPLCodeGen.main(LCPLCodeGen.java:23)
llc: compiler.lcpl.ir:1139:19: error: '%3' defined with type '{ { \4, i32, \2, [0 x i8*] }*, i32, i8* }*'
	%4 = icmp eq i32 %3, @_string_constant.299
	                 ^
clang: error: no such file or directory: 'compiler.lcpl.ir.s'
./eval.sh: line 27: ./compiler: No such file or directory
rm: cannot remove `compiler': No such file or directory
